--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@adobe/coral-spectrum": "^4.18.0",
     "@types/chrome": "^0.0.283",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
